--- a/index.html
+++ b/index.html
@@ -31,21 +31,18 @@
         supported-color-schemes: light dark;
       }
       @media (prefers-color-scheme: dark) {
-        body,
-        center,
-        div,
-        table {
+        body, center, table {
           background-color: #ffffff !important;
           color: #212121 !important;
         }
         .darkmode-bg {
           background-color: #ffffff !important;
         }
-        .mobile-dark {
-          padding: 20px !important;
+        table.footer-dark, table.footer-dark tr td {
+          background-color: #000000 !important;
         }
-        table.footer-dark {
-          background-color: #000000;
+        a.footer-menu-anchor {
+          color: #212121 !important;
         }
       }
       @media only screen and (max-width: 430px) {
@@ -290,7 +287,7 @@
                         <table cellpadding="0" cellspacing="0" border="0" width="100%">
                           <tr>
                             <td width="100%" align="center">
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;">About Ron</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">About Ron</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
                                   <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
@@ -299,7 +296,7 @@
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
                                 <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;">Contact Us</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Contact Us</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
                                   <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
@@ -308,7 +305,7 @@
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
                                 <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
                               </span>
-                              <a href="https://ronorp-help.net/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;">Help</a>
+                              <a href="https://ronorp-help.net/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Help</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
                                   <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
@@ -317,7 +314,7 @@
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
                                 <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;">Privacy</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Privacy</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
                                   <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
@@ -326,7 +323,7 @@
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
                                 <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;">Unsubscribe</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Unsubscribe</a>
                             </td>
                           </tr>
                         </table>
