--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 </a>
                               <![endif]-->
                               <a href="#" target="_blank" style="display: inline-block">
-                                <img style="width: 167px; height: 35px;" class="mobile-logo" src="https://res.cloudinary.com/dqqunslwu/image/upload/v1735018253/site-logo_tyhxxo.png" alt="logo" />
+                                <img style="width: 167px; height: 35px;" width="167" height="35" class="mobile-logo" src="https://res.cloudinary.com/dqqunslwu/image/upload/v1735018253/site-logo_tyhxxo.png" alt="logo" />
                               </a>
                             </td>
                           </tr>
