--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light dark" />
-    <meta name="supported-color-schemes" content="light dark" />
+    <meta name="color-scheme" content="only" />
+    <meta name="supported-color-schemes" content="only" />
 
     <!--================ Font family =============-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
     />
     <!--============== Custom styles ===============-->
@@ -26,80 +25,36 @@
       img {
         border: 0;
       }
-      :root {
-        color-scheme: light dark;
-        supported-color-schemes: light dark;
-      }
-      @media (prefers-color-scheme: dark) {
-        body, center, table {
-          background-color: #ffffff !important;
-          color: #212121 !important;
-        }
-        .darkmode-bg {
-          background-color: #ffffff !important;
-        }
-        table.footer-dark, table.footer-dark tr td {
-          background-color: #000000 !important;
-        }
-        a.footer-menu-anchor {
-          color: #212121 !important;
-        }
-      }
-      @media only screen and (max-width: 430px) {
-        .mobile-heading {
-          font-size: 25px !important;
-          line-height: 35px !important;
-        }
-        .mobile-d-none {
-          display: none !important;
-        }
-        .mobile-d-block {
-          display: block !important;
-        }
-        .mobile-w-8 {
-          width: 8px !important;
-        }
-        .max-w-85 {
-          max-width: 85% !important;
-          width: 100% !important;
-        }
-        .digest-dashboard-btn-space {
-          border-left: 0 !important;
-          border-right: 0 !important;
-        }
-        .w-100 {
-          width: 100% !important;
-        }
-      }
     </style>
   </head>
 
   <body style="background: #e5e5e5; font-family: 'Source Sans 3', sans-serif !important;">
-    <center width="100%" style="max-width: 680px; table-layout: fixed; font-family: 'Source Sans 3', sans-serif !important; margin-left: auto; margin-right: auto; background: #e5e5e5; word-break: break-word; word-wrap: break-word; margin-top: 32px; margin-bottom: 32px; border: 1px solid #eaeaea;" class="mobile-dark">
-      <!-- Preheader (remove comment) -->
+    <center width="100%" style="max-width: 680px; table-layout: fixed; font-family: 'Source Sans 3', sans-serif !important; margin-left: auto; margin-right: auto; background: #FFFFFE !important; background-image: linear-gradient(#FFFFFE,#FFFFFE) !important; color: #212121; word-break: break-word; word-wrap: break-word; margin-top: 32px; margin-bottom: 32px; border: 1px solid #eaeaea;">
+    <!-- Preheader (remove comment) -->
     <div style="font-size: 0px; line-height: 1px; mso-line-height-rule: exactly; display: none; max-width: 0px; max-height: 0px; opacity: 0; overflow: hidden; mso-hide: all;">
       <!-- Add Preheader Text Here (85-100 characters in length) -->
     </div>
     <!-- End Preheader (remove comment) -->
 
     <!--[if (gte mso 9)|(IE)]>
-      <table width="680" align="center" style="border-spacing:0;color:#212121;background-color:#ffffff" role="presentation">
+      <table width="680" align="center" style="border-spacing:0;color:#212121;background: #FFFFFE !important;background-image: linear-gradient(#FFFFFE,#FFFFFE) !important;" role="presentation">
         <tr>
           <td style="padding:0;">
       <![endif]-->
 
       <!--[if (gte mso 9)|(IE)]>
-      <table width="680" align="center" style="border-spacing:0;color:#212121;background-color:#ffffff" role="presentation">
+      <table width="680" align="center" style="border-spacing:0;color:#212121;background: #FFFFFE !important;background-image: linear-gradient(#FFFFFE,#FFFFFE) !important;" role="presentation">
         <tr>
           <td style="padding:0;">
     <![endif]-->
     <!--=============== Global ==================-->
-      <table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" style="font-family: 'Source Sans 3', sans-serif !important; background: #ffffff; color: #212121; border-spacing: 0; word-break: break-word; word-wrap: break-word;" role="presentation">
+      <table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" style="font-family: 'Source Sans 3', sans-serif !important; background: #FFFFFE !important; background-image: linear-gradient(#FFFFFE,#FFFFFE) !important; color: #212121; border-spacing: 0; word-break: break-word; word-wrap: break-word;" role="presentation">
         <tr>
-          <td width="100%">
+          <td width="100%" style="background: #FFFFFE; background-image: linear-gradient(#FFFFFE,#FFFFFE);">
+            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="background: #FFFFFE; background-image: linear-gradient(#FFFFFE,#FFFFFE);">
             <table cellpadding="0" cellspacing="0" border="0" width="100%">
               <tr>
-                <td width="100%">
+                <td width="100%" style="background: #FFFFFE; background-image: linear-gradient(#FFFFFE,#FFFFFE);">
                   <!--============ Header markup ==============-->
                   <table cellpadding="0" cellspacing="0" border="0" width="100%">
                     <tr>
@@ -224,11 +179,11 @@
                         <td width="48"></td>
                         <td width="584">
                           <!--[if (gte mso 9)|(IE)]>
-                            <a href="https://www.google.com/" target="_blank" style="display: inline-block; text-decoration: none; white-space: nowrap; font-size: 12pt; font-weight: 700; line-height: 18.75pt; letter-spacing: 0.037pt; text-align: center; padding: 5.25pt 18pt; border: 0.75pt solid #1a171b; border-radius: 37.5pt; color: #ffffff; background-color: #1a171b;">
+                            <a href="https://www.google.com/" target="_blank" style="display: inline-block; text-decoration: none; white-space: nowrap; font-size: 12pt; font-weight: 700; line-height: 18.75pt; letter-spacing: 0.037pt; text-align: center; padding: 5.25pt 18pt; border: 0.75pt solid #1a171b; border-radius: 37.5pt; color: #FFFFFE; background-color: #1a171b;">
                               Go to Profile
                             </a>
                           <![endif]-->
-                          <a href="https://www.google.com/" target="_blank" style="display: inline-block; text-decoration: none; white-space: nowrap; font-size: 16px; font-weight: 700; line-height: 25px; letter-spacing: 0.05px; text-align: center; padding: 7px 24px; border: 1px solid #1a171b; border-radius: 50px; color: #ffffff; background-color: #1a171b; text-transform: capitalize;">
+                          <a href="https://www.google.com/" target="_blank" style="display: inline-block; text-decoration: none; white-space: nowrap; font-size: 16px; font-weight: 700; line-height: 25px; letter-spacing: 0.05px; text-align: center; padding: 7px 24px; border: 1px solid #1a171b; border-radius: 50px; color: #FFFFFE; background-color: #1a171b; text-transform: capitalize;">
                             Create new Password
                           </a>
                         </td>
@@ -277,7 +232,7 @@
                   <!--=================== End Body ===================-->
 
                   <!--=============== Footer markup ==================-->
-                  <table cellpadding="0" cellspacing="0" border="0" width="100%" class="footer-dark" style="background-color: #000000">
+                  <table cellpadding="0" cellspacing="0" border="0" width="100%" class="footer-dark" style="background: #000001; background-image: linear-gradient(#000001,#000001);">
                     <tr>
                       <td width="100%" height="32" colspan="3"></td>
                     </tr>
@@ -287,43 +242,43 @@
                         <table cellpadding="0" cellspacing="0" border="0" width="100%">
                           <tr>
                             <td width="100%" align="center">
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">About Ron</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">About Ron</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
-                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
+                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #FFFFFE;"></span>
                               </span>
                               <![endif]-->
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
-                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
+                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #FFFFFE;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Contact Us</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Contact Us</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
-                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
+                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #FFFFFE;"></span>
                               </span>
                               <![endif]-->
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
-                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
+                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #FFFFFE;"></span>
                               </span>
-                              <a href="https://ronorp-help.net/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Help</a>
+                              <a href="https://ronorp-help.net/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Help</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
-                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
+                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #FFFFFE;"></span>
                               </span>
                               <![endif]-->
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
-                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
+                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #FFFFFE;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Privacy</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Privacy</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
-                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #ffffff;"></span>
+                                  <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #FFFFFE;"></span>
                               </span>
                               <![endif]-->
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
-                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #ffffff;"></span>
+                                <span style="display: inline-block; width: 1px; height: 15px; background-color: #FFFFFE;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Unsubscribe</a>
+                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Unsubscribe</a>
                             </td>
                           </tr>
                         </table>
@@ -354,8 +309,8 @@
                     <tr>
                       <td width="136"></td>
                       <td>
-                        <p style="text-align: center; color: #ffffff; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;">
-                          © by Ron Orp 2024
+                        <p style="text-align: center; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;">
+                          © by Ron Orp 2025
                         </p>
                       </td>
                       <td width="136"></td>
