--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                         <td width="584">
                           <!--[if (gte mso 9)|(IE)]>
                             <p style="color: #212121; font-size: 12pt; font-weight: 400; line-height: 18.75pt; letter-spacing: 0.06pt; margin-top: 0; margin-bottom: 0;">
-                              To continue using the site as you’re used to, you’ll need to create a new password. It’s quick and easy—just click here,
+                              To continue using the site as you’re used to, you’ll need to create a new password. It’s quick and easy—just click here.
                             </p>
                           <![endif]-->
                           <p style="color: #212121; font-size: 16px; font-weight: 400; line-height: 25px; letter-spacing: 0.08px; margin-top: 0; margin-bottom: 0;">
-                            To continue using the site as you’re used to, you’ll need to create a new password. It’s quick and easy—just click here,
+                            To continue using the site as you’re used to, you’ll need to create a new password. It’s quick and easy—just click here.
                           </p>
                         </td>
                         <td width="48"></td>
@@ -180,11 +180,11 @@
                         <td width="584">
                           <!--[if (gte mso 9)|(IE)]>
                             <a href="https://www.google.com/" target="_blank" style="display: inline-block; text-decoration: none; white-space: nowrap; font-size: 12pt; font-weight: 700; line-height: 18.75pt; letter-spacing: 0.037pt; text-align: center; padding: 5.25pt 18pt; border: 0.75pt solid #1a171b; border-radius: 37.5pt; color: #FFFFFE; background-color: #1a171b;">
-                              Go to Profile
+                              Create New Password
                             </a>
                           <![endif]-->
                           <a href="https://www.google.com/" target="_blank" style="display: inline-block; text-decoration: none; white-space: nowrap; font-size: 16px; font-weight: 700; line-height: 25px; letter-spacing: 0.05px; text-align: center; padding: 7px 24px; border: 1px solid #1a171b; border-radius: 50px; color: #FFFFFE; background-color: #1a171b; text-transform: capitalize;">
-                            Create new Password
+                            Create New Password
                           </a>
                         </td>
                         <td width="48"></td>
@@ -214,13 +214,13 @@
                         <td width="584">
                           <!--[if (gte mso 9)|(IE)]>
                             <p style="color: #212121; font-size: 12pt; font-weight: 400; line-height: 18.75pt; letter-spacing: 0.06pt; margin-top: 0; margin-bottom: 0;">
-                              <span style="display: block;">Best Regards,</span>
-                              <span style="display: block;">RonOrp team.</span>
+                              <span style="display: block;">Greetings to the city,</span>
+                              <span style="display: block;">Ron</span>
                             </p>
                           <![endif]-->
                           <p style="color: #212121; font-size: 16px; font-weight: 400; line-height: 25px; letter-spacing: 0.08px; margin-top: 0; margin-bottom: 0;">
-                            <span style="display: block;">Best Regards,</span>
-                            <span style="display: block;">RonOrp team.</span>
+                            <span style="display: block;">Greetings to the city,</span>
+                            <span style="display: block;">Ron</span>
                           </p>
                         </td>
                         <td width="48"></td>
@@ -242,7 +242,7 @@
                         <table cellpadding="0" cellspacing="0" border="0" width="100%">
                           <tr>
                             <td width="100%" align="center">
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">About Ron</a>
+                              <a href="https://ronorp.net/about-ron" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">About Ron</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
                                   <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #FFFFFE;"></span>
@@ -251,7 +251,7 @@
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
                                 <span style="display: inline-block; width: 1px; height: 15px; background-color: #FFFFFE;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Contact Us</a>
+                              <a href="https://ronorp-help.net/kontakt/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Contact</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
                                   <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #FFFFFE;"></span>
@@ -269,7 +269,7 @@
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
                                 <span style="display: inline-block; width: 1px; height: 15px; background-color: #FFFFFE;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Privacy</a>
+                              <a href="https://ronorp-help.net/privacy-policy" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Privacy</a>
                               <!--[if (gte mso 9)|(IE)]>
                                 <span style="display: inline-block; padding: 0 6pt; vertical-align: middle;">
                                   <span style="display: inline-block; width: 0.75pt; height: 11.25pt; background-color: #FFFFFE;"></span>
@@ -278,7 +278,7 @@
                               <span style="display: inline-block; padding: 0 8px; vertical-align: middle;">
                                 <span style="display: inline-block; width: 1px; height: 15px; background-color: #FFFFFE;"></span>
                               </span>
-                              <a href="https://www.google.com/" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Unsubscribe</a>
+                              <a href="https://ronorp.net/my-follows" target="_blank" style="display: inline-block; white-space: nowrap; text-decoration: none; color: #FFFFFE; font-size: 14px; font-weight: 400; line-height: 22px; letter-spacing: 0.05px; margin-top: 0; margin-bottom: 0;" class="footer-menu-anchor">Unsubscribe</a>
                             </td>
                           </tr>
                         </table>
